--- a/views/base.pug
+++ b/views/base.pug
@@ -6,15 +6,15 @@ html
         meta(charset='UTF-8')
         meta(name='viewport' content='width=device-width, initial-scale=1.0')
         link(href='https://fonts.googleapis.com/css?family=Lato:300,300i,700' rel='stylesheet')
-        title Natours | Exciting tours for adventurous people
+        title Natours | #{title}
 
     body
         // header
         include _header
 
         // Content
-        section.overview
-            h1= tour
+        block content
+            h1 This is a placeholder heading
 
         // Footer
         include _footer
